WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273697
Suppress uncounted local var warning in RETURN_IF_EXCEPTION
https://bugs.webkit.org/show_bug.cgi?id=273697
Summary
Suppress uncounted local var warning in RETURN_IF_EXCEPTION
Mikhail R. Gadelha
Reported
2024-05-03 11:21:51 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Mikhail R. Gadelha
Comment 1
2024-05-03 11:25:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28111
EWS
Comment 2
2024-05-09 06:42:53 PDT
Committed
278560@main
(00b342534fc4): <
https://commits.webkit.org/278560@main
> Reviewed commits have been landed. Closing PR #28111 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-05-09 06:43:14 PDT
<
rdar://problem/127809671
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug