Suppress uncounted local var warning in RETURN_IF_EXCEPTION https://bugs.webkit.org/show_bug.cgi?id=273697

Reviewed by Ryosuke Niwa.

Add a macro to supress warning on the vm variable not being counted when
the preprocessor expands the RETURN_IF_EXCEPTION macro in a function
body.

This patch removes more than 2000 warnings when checking all the webkit
codebase.

* Source/JavaScriptCore/runtime/ExceptionScope.h:

Canonical link: https://commits.webkit.org/278560@main